--- a/guess_location_based_on_distance.ipynb
+++ b/guess_location_based_on_distance.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_KEY = 'AIzaSyAlWkTDa4GWDYRBw0o_U-n3pDHUY2z1FFI'\n",
+    "API_KEY = '<my key...'\n",
     "gmaps.configure(api_key=API_KEY)\n",
     "geocoder = geopy.geocoders.GoogleV3(api_key=API_KEY)"
    ]
